<resources>
    <string name="app_name">Health Diary</string>
    <string name="weight_tab">Weight</string>
    <string name="blood_tab">Blood pressure</string>
    <string name="last_record">Last record:</string>
    <string name="insert_weight">Weight (kg):</string>
    <string name="insert_height">Height (cm):</string>
    <string name="empty_value" translatable="false">–</string>
    <string name="insert_diastolic">Diastolic (mmHg):</string>
    <string name="insert_systolic">Systolic (mmHg):</string>
    <string name="weight_hint" translatable="false">78,6</string>
    <string name="height_hint" translatable="false">175</string>
    <string name="systolic_hint" translatable="false">120</string>
    <string name="diastolic_hint" translatable="false">80</string>
    <string name="random_value">Random values</string>
    <string name="register_values">Register values</string>
    <string name="registered_weight">Weight registered</string>
    <string name="pressure_registered">Blood pressure registered</string>
    <string name="last_record_weight">Last record: Weight</string>
    <string name="last_record_blood_pressure">Last record: Blood pressure</string>
    <string name="blood_pressure">Blood pressure (mmHg):</string>
    <string name="weight_higher">The introduced weight is higher than your average</string>
    <string name="weight_lower">The introduced weight is lower than your average</string>
    <string name="average_weight">Avg weight (kg):</string>
    <string name="average_diastolic">Avg diastolic:</string>
    <string name="average_systolic">Avg systolic:</string>
    <string name="average_height">Avg height (cm):</string>
    <string name="average_bmi">Avg BMI:</string>
    <string name="systolic_label">Systolic:</string>
    <string name="diastolic_label">Diastolic:</string>
    <string name="weight_label">Weight:</string>
    <string name="height_label">Height:</string>
    <string name="bmi_label">BMI:</string>
    <string name="blood_pressure_detail">Blood pressure records</string>
    <string name="body_measures_detail">Body measures records</string>

</resources>
