<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:padding="8dp"
    tools:context=".views.BloodPressureFragment">

    <TextView
        android:id="@+id/insert_diastolic_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_diastolic"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/inserted_diastolic"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/insert_systolic_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_systolic"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/inserted_systolic"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inserted_diastolic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/diastolic_hint"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/insert_diastolic_label" />

    <EditText
        android:id="@+id/inserted_systolic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/systolic_hint"
        android:imeOptions="actionGo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusForward="@id/register_blood_pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/insert_systolic_label"
        app:layout_constraintStart_toStartOf="@+id/inserted_diastolic"
        app:layout_constraintTop_toBottomOf="@+id/inserted_diastolic" />

    <Switch
        android:id="@+id/random_pressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/random_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inserted_systolic" />

    <Button
        android:id="@+id/register_blood_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/register_values"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/average_blood_pressure_card"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/register_blood_pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:padding="8dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/avg_diastolic_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/average_diastolic"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/avg_systolic_description"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/avg_systolic_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/average_systolic"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/avg_diastolic_description"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/avg_diastolic"
                android:layout_width="wrap_content"
                android:layout_height="81dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/empty_value"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/holo_purple"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/avg_diastolic_description"
                app:layout_constraintStart_toStartOf="@+id/avg_diastolic_description"
                app:layout_constraintTop_toBottomOf="@+id/avg_diastolic_description"
                tools:text="80" />

            <TextView
                android:id="@+id/avg_systolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/empty_value"
                android:textAlignment="center"
                android:textColor="@android:color/holo_purple"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/avg_systolic_description"
                app:layout_constraintStart_toStartOf="@+id/avg_systolic_description"
                app:layout_constraintTop_toBottomOf="@+id/avg_systolic_description"
                tools:text="120" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>