<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/cell_weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cell_weight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/cell_weight_label"
        app:layout_constraintEnd_toEndOf="@+id/cell_height_value"
        tools:text="178 cm" />

    <TextView
        android:id="@+id/cell_height_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/cell_height_label"
        app:layout_constraintStart_toEndOf="@+id/cell_height_label"
        tools:text="81.5 kg" />

    <TextView
        android:id="@+id/cell_bmi_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/cell_bmi_label"
        app:layout_constraintEnd_toEndOf="@+id/cell_height_value"
        tools:text="21.3" />

    <TextView
        android:id="@+id/cell_body_measure_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cell_body_measure_hour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12th Jan" />

    <TextView
        android:id="@+id/cell_body_measure_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cell_body_measure_day"
        app:layout_constraintTop_toBottomOf="@+id/cell_body_measure_day"
        tools:text="12:31" />

    <TextView
        android:id="@+id/cell_height_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/height_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cell_weight_label" />

    <TextView
        android:id="@+id/cell_bmi_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bmi_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cell_height_label" />

</androidx.constraintlayout.widget.ConstraintLayout>